<resources>
    <string name="app_name">Score Keeper</string>
    <string name="field_goal">Field Goal</string>
    <string name="touchdown">Touchdown</string>
    <string name="extra_point">Extra-Point Attempt</string>
    <string name="safety">Safety</string>

    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>

    <string name="reset">Reset</string>
</resources>
